# GenomeAI

./: .editorconfig  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VISION.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.github/workflows/: ci.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0e9a0c1aa7b6_create_variants_table.py  0f3f64decdb7_create_genomes_table.py  2325f8c4566c_create_experiments_table.py  3c7e420e271b_create_samples_table.py  4a9d6aaf7429_create_transcripts_table.py  6ca189ad6980_initial.py  7cf6d6506732_create_projects_table.py  cc42f7960492_create_proteins_table.py  df47a097676a_create_studies_table.py  ec292f5d7884_create_genes_table.py  f90b9cf85ea9_create_datasets_table.py
apps/api/src/genomeai_api/: __init__.py  dependencies.py  exceptions.py  main.py  state.py
apps/api/src/genomeai_api/cache/: __init__.py  redis.py
apps/api/src/genomeai_api/database/: __init__.py  base.py  engine.py  session.py
apps/api/src/genomeai_api/models/: __init__.py  dataset.py  experiment.py  gene.py  genome.py  project.py  protein.py  sample.py  study.py  transcript.py  variant.py
apps/api/src/genomeai_api/repositories/: dataset.py  experiment.py  gene.py  genome.py  project.py  protein.py  sample.py  search.py  study.py  transcript.py  variant.py
apps/api/src/genomeai_api/routes/: datasets.py  experiments.py  genes.py  genomes.py  health.py  projects.py  proteins.py  samples.py  search.py  studies.py  transcripts.py  variants.py
apps/api/src/genomeai_api/schemas/: dataset.py  experiment.py  gene.py  genome.py  project.py  protein.py  sample.py  search.py  study.py  transcript.py  variant.py
apps/api/src/genomeai_api/search/: __init__.py  autocomplete.py  cache.py  coordinate_intervals.py  coordinate_search.py  coordinate_types.py  coordinate_validation.py  expressions.py  fts.py  highlighting.py  indexes.py  operators.py  query.py  query_builder.py  ranking.py  suggestions.py  validation.py
apps/api/src/genomeai_api/services/: dataset.py  experiment.py  gene.py  genome.py  project.py  protein.py  sample.py  search.py  study.py  transcript.py  variant.py
apps/api/tests/: test_advanced_query.py  test_cache.py  test_config.py  test_database.py  test_dataset_api.py  test_dataset_migration.py  test_dataset_model.py  test_dataset_relationships.py  test_dataset_repository.py  test_dataset_schemas.py  test_dataset_service.py  test_dependencies.py  test_experiment_api.py  test_experiment_migration.py  test_experiment_model.py  test_experiment_relationships.py  test_experiment_repository.py  test_experiment_schemas.py  test_experiment_service.py  test_gene_api.py  test_gene_migration.py  test_gene_model.py  test_gene_relationships.py  test_gene_repository.py  test_gene_schemas.py  test_gene_service.py  test_genome_api.py  test_genome_migration.py  test_genome_model.py  test_genome_repository.py  test_genome_schemas.py  test_genome_service.py  test_health.py  test_lifespan.py  test_project_api.py  test_project_migration.py  test_project_model.py  test_project_relationships.py  test_project_repository.py  test_project_schemas.py  (+42 more)
apps/cli/: README.md  pyproject.toml
apps/cli/src/genomeai_cli/: __init__.py  main.py
apps/cli/src/genomeai_cli/commands/: doctor.py  version.py
apps/cli/tests/: test_cli.py
apps/desktop/: README.md
apps/mcp/: README.md  pyproject.toml
apps/mcp/src/genomeai_mcp/: __init__.py  main.py
apps/web/: README.md  package.json
apps/web/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/src/app/health/: page.tsx
apps/worker/: README.md  pyproject.toml
apps/worker/src/genomeai_worker/: main.py
connectors/: README.md
docker/: README.md
docs/ai/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/database/: README.md
docs/decisions/: 001-workflow-dag-engine.md  002-plugin-sandbox.md  003-knowledge-graph-storage.md  004-abac-over-rbac.md  005-core-languages.md  README.md
docs/deployment/: README.md
docs/development/: README.md
docs/plugins/: README.md
docs/research/: README.md
docs/roadmap/: README.md
docs/search/: advanced-query.md  architecture.md  full-text-search.md  genome-coordinate-search.md  ranking.md  roadmap.md  search-suggestions.md
plugins/: README.md
scripts/: README.md
