[project]
name = "genomeai-api"
version = "0.1.0"
description = "GenomeAI REST API"
requires-python = ">=3.12"
dependencies = [
    "genomeai-config",
    "genomeai-logging",
    "genomeai-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genomeai_api"]

[project.scripts]
genomeai-api = "genomeai_api.main:run"
