[project]
name = "genomeai-cli"
version = "0.1.0"
description = "GenomeAI command-line interface"
requires-python = ">=3.12"
dependencies = [
    "genomeai-config",
    "genomeai-logging",
    "genomeai-shared",
    "typer>=0.15",
    "rich>=13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genomeai_cli"]

[project.scripts]
genomeai = "genomeai_cli.main:app"
