[project]
name = "genomeai-mcp"
version = "0.1.0"
description = "GenomeAI MCP server"
requires-python = ">=3.12"
dependencies = [
    "genomeai-config",
    "genomeai-logging",
    "genomeai-shared",
    "mcp>=1.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genomeai_mcp"]

[project.scripts]
genomeai-mcp = "genomeai_mcp.main:main"
