[project]
name = "genomeai-worker"
version = "0.1.0"
description = "GenomeAI background worker"
requires-python = ">=3.11"
dependencies = [
    "genomeai-config",
    "genomeai-logging",
    "genomeai-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genomeai_worker"]
